working on mobile app bugs and toast message

--- a/src/AllTheme/MobileApp/SmilingRock_MobileApp/Components/Pages/OrderFlow/DeliveryPage/Delivery.scss
+++ b/src/AllTheme/MobileApp/SmilingRock_MobileApp/Components/Pages/OrderFlow/DeliveryPage/Delivery.scss
@@ -13,7 +13,7 @@
 }
 
 .smrMo_addMainDiv {
-  margin-inline: 1%;
+  margin-inline: 3%;
 }
 
 .smrMo_getAddrMainDiv {
@@ -25,17 +25,17 @@
     left: 50%;
     transform: translate(-50%, 0%);
     text-align: center;
-  
+
     .smrmo_title {
       color: $titleColor;
       font-size: $fontSize5;
     }
-  
+
     .smrmo_desc {
       color: $titleColor;
       font-size: $fontSize2;
     }
-  
+
     .smrmo_browseOurCollectionbtn {
       background-color: #7d7f85;
       border: none;
@@ -49,30 +49,30 @@
   }
 }
 
-.smr_addressTextFields {
+.smrMo_addressTextFields {
   margin-bottom: 18px !important;
   font-family: $primaryFontFamily !important;
   color: $titleColor !important;
 }
 
-.smr_AddrCard {
+.smrMo_AddrCard {
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px !important;
   padding: 20px 20px 0px 20px !important;
 }
 
-.smr_ActiveAddrCard {
+.smrMo_ActiveAddrCard {
   padding: 20px 20px 0px 20px !important;
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px !important;
-  background: #f5f4f4 !important;
+  background: #fff3ea !important;
   position: relative;
 }
 
-.smr_defualt_addrSelected {
+.smrMo_defualt_addrSelected {
   padding: 3px 10px;
   font-family: $primaryFontFamily !important;
   font-size: $fontSize3;
   color: #fff;
-  background: blue;
+  background: rgba(214, 176, 139, 1);
   border-radius: 6px;
   border: none;
   cursor: pointer;
@@ -82,17 +82,17 @@
   transition: background-color 0.3s, color 0.3s;
 }
 
-.smr_defualt_addrSelectedHide {
+.smrMo_defualt_addrSelectedHide {
   display: none !important;
 }
 
-.smr_addrTypoTitle {
+.smrMo_addrTypoTitle {
   color: $titleColor;
   font-family: $primaryFontFamily !important;
   text-transform: capitalize;
 }
 
-.smr_addrTypo {
+.smrMo_addrTypo {
   color: $titleColor;
   font-family: $primaryFontFamily !important;
   text-transform: capitalize;
@@ -103,6 +103,8 @@
   position: fixed;
   bottom: 60px;
   width: 100%;
+  z-index: 11;
+  background: #fff;
 
   .smrMo_AddNewAddrbtn {
     height: 50px;
@@ -112,8 +114,8 @@
     border-radius: none !important;
     font-family: $primaryFontFamily !important;
     font-size: $fontSize3;
-    color: #000;
-    background-color: rgb(192, 187, 177);
+    color: #fff;
+    background: #c0bbb1;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
 
@@ -125,8 +127,8 @@
 
   .smrMo_ContinueOrderbtn {
     font-family: $primaryFontFamily !important;
-    background-color: #ffd814 !important;
-    color: #000 !important;
+    background-color: rgb(214 176 139) !important;
+    color: #fff !important;
     font-size: $fontSize3 !important;
     height: 50px;
     width: 50%;
@@ -136,7 +138,7 @@
   }
 }
 
-.smr_dialogTitle {
+.smrMo_dialogTitle {
   color: $titleColor;
   font-weight: 500 !important;
   text-align: center;
@@ -182,18 +184,18 @@
   }
 }
 
-.smr_editDeleteBtngroup {
+.smrMo_editDeleteBtngroup {
   display: flex;
   justify-content: space-around;
   align-items: center;
   margin-bottom: 10px;
 
-  .smr_editIcon {
+  .smrMo_editIcon {
     font-size: 20px;
     color: $titleColor;
   }
 
-  .smr_DeleteIcon {
+  .smrMo_DeleteIcon {
     font-size: 20px;
     color: $titleColor;
   }
@@ -205,7 +207,7 @@
 // Media Query for max-width: 800px
 @media (max-width: 800px) {
   .smrMo_addrcardContent {
-    .smr_addrTypoTitle {
+    .smrMo_addrTypoTitle {
       font-size: $fontSize4 !important;
     }
 
@@ -214,45 +216,48 @@
     }
   }
 
-  .smr_editIcon {
+  .smrMo_editIcon {
     font-size: 15px !important;
     color: $titleColor;
   }
 
-  .smr_DeleteIcon {
+  .smrMo_DeleteIcon {
     font-size: 15px !important;
     color: $titleColor;
   }
 
-  .smr_defualt_addrSelected {
+  .smrMo_defualt_addrSelected {
     padding: 3px 10px;
     font-size: $fontSize2;
   }
 
-  .smr_AddrCard,
-  .smr_ActiveAddrCard {
+  .smrMo_AddrCard,
+  .smrMo_ActiveAddrCard {
     padding: 5px !important;
   }
-  .smrMo_cardActionBtn{
+
+  .smrMo_cardActionBtn {
     margin: 0px 10px 20px 10px;
-  .smrMo_AddressModalBtnGroup {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 10px;
-    .smrMo_AddNewAddrModalbtn {
-      margin-right: 0 !important;
-      height: 35px;
-      width: 120px;
-      font-size: $fontSize2;
-    }
-  
-    .smrMo_Cancelbtn {
-      margin-right: 0 !important;
-      height: 35px;
-      width: 120px;
-      font-size: $fontSize2;
+
+    .smrMo_AddressModalBtnGroup {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      gap: 10px;
+
+      .smrMo_AddNewAddrModalbtn {
+        margin-right: 0 !important;
+        height: 35px;
+        width: 120px;
+        font-size: $fontSize2;
+      }
+
+      .smrMo_Cancelbtn {
+        margin-right: 0 !important;
+        height: 35px;
+        width: 120px;
+        font-size: $fontSize2;
+      }
     }
   }
-}
 }
